Fixed Spacing

--- a/src/styles/account.css
+++ b/src/styles/account.css
@@ -1,12 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
 .acc-page {
     display: flex;
     justify-content: center;
@@ -119,6 +110,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    width: 70%;
 }
 
 .acc-form .form form h3 {
